Resolved bugs on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,31 @@ body{
     --tw-gradient-from: #020617 var(--tw-gradient-from-position);
     background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
+
+.pt-14{
+    padding-top: 3.5rem;
+}
+
+@media (max-width:1440px){
+    .App{
+        height:100vh !important;
+    }
+}
+.rat{
+    height: 100%;
+ }
+
+ 
+@media (max-width:768px){
+   
+     .rat{
+        height: 76%;
+     }
+    .h-sm-100{
+        height:100% !important;
+    }
+
+    .h-sm-vh{
+        height:100vh !important; 
+    }
+}
